syntax/k8stest/k8s-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook-live-mysql
  labels:
    app: webook-live-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webook-live-mysql
  template:
    metadata:
      name: webook-live-mysql
      labels:
        app: webook-live-mysql
    spec:
      containers:
        - name: webook-live-mysql
          image: mysql:8.0
          imagePullPolicy: IfNotPresent
#          volumeMounts:
##            - 这边要对应到 mysql 的数据存储的位置
##            - 通过 MySQL 的配置可以改这个目录
#            - mountPath: /var/lib/mysql
##              我 POD 里面有那么多 volumes，我要用哪个
#              name: mysql-storage
          ports:
            - containerPort: 3306
#        - name: webook-live-hadoop
      restartPolicy: Always
#      我整个 POD 有哪些
#      volumes:
#        - name: mysql-storage
#          persistentVolumeClaim:
#            claimName: webook-mysql-live-claim-v3
#        - name: hadoop-storage
#          persistentVolumeClaim:
#            claimName: webook-hadoop-live-claim
