syntax/k8stest/k8s-mysql-deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook-live-mysql2
  labels:
    app: webook-live-mysql2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webook-live-mysql2
  template:
    metadata:
      name: webook-live-mysql2
      labels:
        app: webook-live-mysql2
    spec:
      containers:
        - name: webook-live-mysql2
          image: mysql:8.0
          imagePullPolicy: IfNotPresent
          volumeMounts:
#            - 这边要对应到 mysql 的数据存储的位置
#            - 通过 MySQL 的配置可以改这个目录
            - mountPath: /var/lib/mysql
#              我 POD 里面有那么多 volumes，我要用哪个
              name: mysql-storage #跟下面的相同
          ports:
            - containerPort: 3306
#        - name: webook-live-hadoop
      restartPolicy: Always
#      我整个 POD 有哪些
      volumes:
        - name: mysql-storage #跟上面的相同
          persistentVolumeClaim:
            claimName: webook-mysql-live-claim
#        - name: hadoop-storage
#          persistentVolumeClaim:
#            claimName: webook-hadoop-live-claim-v3
