syntax/k8stest/k8s-mysql-service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-live-mysql2
spec:
  selector:
    app: webook-live-mysql2
  ports:
    - protocol: TCP
#      你访问的端口
      port: 11310
      targetPort: 3306
      nodePort: 30003
  type: NodePort
