syntax/k8stest/k8s-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webook-live-ingress
  namespace: default
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: live.webook.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webook-live
            port:
              number: 82
